multiple queries for multiple domains, mobile layout

--- a/fcgi/html/index.html
+++ b/fcgi/html/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="HandheldFriendly" content="true" />
 	<meta name="viewport" content="initial-scale=1.0,maximum-scale=1.0,user-scalable=no,width=device-width">
-	<title>domwatch</title>
+	<title>dom.watch</title>
     <link type='text/css' media='all' rel="stylesheet" href="style.css" />
 </head>
 <body>
     <header>
-        <h1>Domwatch</h1>
+        <h1>dom.watch</h1>
         <h2>Notifies you when a domain is available</h2>
     </header>
     <main>
@@ -38,7 +38,7 @@
     </main>
     <footer>
         <content><a name="success" class="success">Success</a><a name="failed_domain" class="failed">Domain is invalid</a><a name="failed_email" class="failed">Email is invalid</a></content>
-        <p>&copy;2017 domwatch <a href="https://github.com/Eun/domwatch">GitHub</a></p>
+        <p>&copy;2017 dom.watch <a href="https://github.com/Eun/domwatch">GitHub</a></p>
     </footer>
 
 </body>
