--- a/fcgi/html/index.html
+++ b/fcgi/html/index.html
@@ -19,7 +19,7 @@
                 <label for="watch">Notify me when a domain is available</label>
                 <form method="POST" enctype="application/x-www-form-urlencoded" action="/api1/watch">
                     <input type="email" name="email" placeholder="you@example.com">
-                    <input type="text" name="domain" pattern="[a-zA-Z0-9\-]\.[a-zA-Z]{2,}" placeholder="example.com">
+                    <input type="text" name="domain" pattern="[a-zA-Z0-9\-]+\.[a-zA-Z]{2,}" placeholder="example.com">
                     <input type="submit" name="action" value="OK"/>
                 </form>
             </section>
@@ -30,7 +30,7 @@
                 <label for="unwatch">Do not notify me anymore</label>
                 <form method="POST" enctype="application/x-www-form-urlencoded" action="/api1/unwatch">
                     <input type="email" name="email" placeholder="you@example.com">
-                    <input type="text" name="domain" pattern="[a-zA-Z0-9\-]\.[a-zA-Z]{2,}" placeholder="example.com">
+                    <input type="text" name="domain" pattern="[a-zA-Z0-9\-]+\.[a-zA-Z]{2,}" placeholder="example.com">
                     <input type="submit" name="action" value="OK"/>
                 </form>
             </section>
